opam-version: "2.0"
name:         "flux"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:
  [ "Romain Calascibetta <romain.calascibetta@gmail.com>"
    "Rizo I <rizo@odis.io>" ]
homepage:     "https://github.com/robur-coop/flux"
bug-reports:  "https://github.com/robur-coop/flux/issues"
dev-repo:     "git+https://github.com/robur-coop/flux.git"
doc:          "https://robur-coop.github.io/flux/"
license:      "MIT"
synopsis:     "Composable streaming abstractions with Miou"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"                       {>= "5.0.0"}
  "dune"                        {>= "3.20.0"}
  "miou"                        {>= "0.5.0"}
  "ocamlformat"                 {with-dev-setup & = "0.27.0"}
  "httpcats"                    {with-dev-setup}
  "mirage-crypto-rng-miou-unix" {with-dev-setup}
  "alcotest"                    {with-test}
]
x-maintenance-intent: [ "(latest)" ]
available: os-family != "windows"
