opam-version: "2.0"
name:         "fluxt"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/robur-coop/flux"
bug-reports:  "https://github.com/robur-coop/flux/issues"
dev-repo:     "git+https://github.com/robur-coop/flux.git"
doc:          "https://robur-coop.github.io/flux/"
license:      "MIT"
synopsis:     "Extensions of flux to provide basic streams (compression, hash, format)"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"             {>= "5.0.0"}
  "dune"              {>= "2.8.0"}
  "miou"              {>= "0.5.0"}
  "decompress"
  "tar"
  "digestif"
  "ocamlformat"       {with-dev-setup & = "0.27.0"}
]
x-maintenance-intent: [ "(latest)" ]
