(executable
 (name infinite)
 (libraries miou.unix flux))

(executable
 (name consume)
 (libraries miou.unix flux))

(executable
 (name random)
 (libraries miou.unix flux))

(executable
 (name error)
 (libraries miou.unix flux))

(executable
 (name zpipe)
 (libraries bstr miou.unix flux fluxt.zl))

(executable
 (name gunzip)
 (libraries miou.unix flux fluxt.gz))

(executable
 (name sha256sum)
 (libraries digestif miou.unix flux))

(executable
 (name head)
 (libraries miou.unix flux))

(executable
 (name repeat)
 (libraries miou.unix flux))

(executable
 (name fetch)
 (libraries httpcats mirage-crypto-rng-miou-unix fmt miou.unix progress flux))

(executable
 (name zip)
 (libraries ptime.clock.os fluxt.zip))
