(library
 (name flux)
 (modules flux bqueue)
 (public_name flux)
 (libraries miou))

(library
 (name flux_gz)
 (modules flux_gz)
 (public_name fluxt.gz)
 (libraries bstr decompress.gz flux))

(library
 (name flux_zl)
 (modules flux_zl)
 (public_name fluxt.zl)
 (libraries bstr decompress.zl flux))

(library
 (name flux_de)
 (modules flux_de)
 (public_name fluxt.de)
 (libraries bstr decompress.de flux))

(library
 (name flux_zip)
 (modules flux_zip)
 (public_name fluxt.zip)
 (libraries ptime fluxt.de))

(library
 (name flux_tar)
 (modules flux_tar)
 (public_name fluxt.tar)
 (libraries tar flux))

(library
 (name flux_hash)
 (modules flux_hash)
 (public_name fluxt.hash)
 (libraries digestif flux))

(documentation
 (package flux)
 (mld_files flux))
